k8s/order/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-app
spec:
  selector:
    app: order-app
  ports:
    - port: 80
      name: http
      targetPort: web
  type: ClusterIP
